--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ hr {
     display: block;
     height: 0px;
     border: 0;
-    border-top: 2px solid #e3e3b0;
+    border-top: 2px solid #e68109;
 }
 
 .header-icon {
@@ -206,7 +206,7 @@ hr {
 #portfolio-filters {
     cursor: default; /* prevents text selection between buttons */
     user-select: none; /* optional: prevent accidental text selection */
-    padding-top: 11px;
+    padding-top: 18px;
   }
 
 #portfolio-filters .filter-btn {
@@ -214,27 +214,26 @@ hr {
     margin: 0.4em;
     padding: 0.4em 1em;
     font-size: 1em;
-    background-color: #e3e3b0;
-    color: #e68019;
-    border: none;
-    border-radius: 0.4em;
+    background-color: #e68019;
+    color: #e3e3b0;
+    border: 2px solid #e3e3b0;
+    border-radius: 0px;
     cursor: pointer;
-    min-width: 6.5em; 
+    width: 8em; 
     text-align: center;
     font-weight: 500;
 }
 
 
 #portfolio-filters .filter-btn:hover {
-    background-color: #ffffff;
-    color: #e68019;
+    filter: brightness(1.05) drop-shadow(0px 0px 3px #e3e3b0);
 }
 
 #portfolio-filters .filter-btn.active {
-    background-color: white;
+    background-color: #e3e3b0;
     color: #e68019;
     font-weight: bold;
-    border: 0px solid #e68019;
+    border: 2px solid #e3e3b0;
     font-weight: 750;
 }
 
@@ -424,7 +423,7 @@ h4 {
 
 .contacts li {
     position: absolute;
-    margin-top: 85px;
+    margin-top: 83px;
     margin-left: 3.1%;
     list-style: none;
     color:#e3e3b0;
@@ -468,10 +467,10 @@ h4 {
 }
 
 #headshot {
-    margin-top: 6.3em;
-    height: 350px; 
-    width: 305px;
-    border: 4.7px solid #e3e3b0;
+    margin-top: 5.3em;
+    height: 365px; 
+    width: 270px;
+    border: 2px solid #e3e3b0;
     
 }
 
@@ -499,15 +498,32 @@ h4 {
 
 .footer {
     margin-top: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     background: linear-gradient(transparent, #e68019, #e68019, #e68019);
     color: #e3e3b0;
     font-size: x-small;
     padding: 22px 0;
-    text-align: center;
+    text-align: left;
+    padding-left: 3.4%;
   }
+
+.contact-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: 0;
+    z-index: 9;
+}
+
+.about-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: 0;
+    z-index: 9;
+}
 
 .footer-content {
     display: inline-block;
@@ -576,7 +592,7 @@ h4 {
                 background-color:#e68019;
                 margin-left: 1.8%;
                 display: inline;
-                font-size: 0.9em !important;
+                font-size: 1em !important;
                 z-index: 87;
             }
 
@@ -593,11 +609,11 @@ h4 {
             }
 
             hr {
-                margin-top: 1em !important;
+                margin-top: 1.05em !important;
                 display: block;
                 height: 0px;
                 border: 0;
-                border-top: 6px solid #e3e3b0 !important;
+                border-top: 2px solid #e68019 !important;
             }
 
             /* index */
@@ -738,10 +754,10 @@ h4 {
             #headshot {
                 text-align: center;
                 position: relative;
-                margin-top: 4em;
+                margin-top: 4.5em;
                 height: 17.8em; 
-                width: 15.5em;
-                border: 6px solid #e3e3b0;
+                width: 13.3em;
+                border: 2px solid #e3e3b0;
             }
             
             .abouttext {
@@ -763,19 +779,31 @@ h4 {
             /* footer */
 
             .footer {
+                margin-bottom: 21px;
+                padding-top: 22px;
+                padding-left: 3.4%;
+                color: #e3e3b0;
+                font-size: x-small;
+                display: block;
+                text-align: left;
+                background: linear-gradient(transparent, #e68019, #e68019, #e68019);
+            }
+
+            .contact-footer {
+                position: fixed;
                 bottom: 0;
                 left: 0;
                 right: 0;
-                margin-bottom: 21px;
-                padding-top: 0px;
-                padding-left: 3.4%;
-                margin-left: 0%;
-                color: #e3e3b0;
-                font-size: x-small;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: linear-gradient(transparent, #e68019, #e68019, #e68019);
+                margin-bottom: 0;
+                z-index: 9;
+            }
+
+            .about-footer {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin-bottom: 0;
                 z-index: 9;
             }
 
