--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ hr {
 }
 
 .lightbox-nav {
-    position: absolute;
-    bottom: 2em;
+    position: fixed;
+    bottom: 15%;
     transform: translateY(0);
     font-size: 2.5em;
     background: none;
@@ -186,11 +186,11 @@ hr {
   }
   
   #prevBtn {
-    left: 20%;
+    left: 15%;
     padding: 20px;
   }
   #nextBtn {
-    right: 20%;
+    right: 15%;
     padding: 20px;
   }
   
