Add minimum width to lightbox navigation for better arrow spacing
- Added min-width: 300px to ensure arrows maintain adequate distance
- Prevents arrows from getting too close together on smaller screens

--- a/style.css
+++ b/style.css
@@ -177,8 +177,9 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0.5em;
+    margin-top: -2.7em;
     padding: 0 2em;
+    min-width: 300px;
   }
 
   .lightbox-nav {
