--- a/style.css
+++ b/style.css
@@ -179,7 +179,9 @@ hr {
     align-items: center;
     margin-top: -2.7em;
     padding: 0 2em;
-    min-width: 300px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .lightbox-nav {
