Shift portfolio image container right on mobile screens
- Added margin-left: 0.5em to #allworks on mobile (max-width: 550px)
- Shifts entire portfolio image list a few pixels to the right
- Improves overall positioning and centering on narrow screens

--- a/style.css
+++ b/style.css
@@ -654,6 +654,7 @@ h4 {
 
             #allworks {
                 margin-right: 1em;
+                margin-left: 0.5em;
             }
 
             .portfolioimage1 {
@@ -663,7 +664,7 @@ h4 {
                 height: 30%;
                 min-height: 60px;
                 max-width: 1300px;
-                margin-left: 3%;
+                margin-left: 1.77%;
             }
 
             .portfolioimage1:hover {
@@ -677,7 +678,7 @@ h4 {
                 height: 30%;
                 min-height: 60px;
                 max-width: 1300px;
-                margin-left: calc(3%);
+                margin-left: calc(1.77%);
             }
 
             .portfolioimage:hover {
