Adjust portfolio container margins on mobile
- Removed margin-left from #allworks on mobile screens
- Changed margin-right from 1em to .5em
- Fine-tuned positioning for better mobile layout

--- a/style.css
+++ b/style.css
@@ -653,8 +653,7 @@ h4 {
             /* portfolio */
 
             #allworks {
-                margin-right: 1em;
-                margin-left: 0.5em;
+                margin-right: .5em;
             }
 
             .portfolioimage1 {
